--- a/templates/site/fpform.html
+++ b/templates/site/fpform.html
@@ -15,116 +15,10 @@
 
 
 {% block content %}
+<h4>{{ form.errors }}</h4>
 
 <!-- PRODUCT Form -->
-<!-- <div class="container-fluid"> -->
-  <h4>{{ form.errors }}</h4>
-  <form method="POST">
-    {% csrf_token %}
-    <div class="row justify-content-center">
-      <div class="form-group col-md-2">
-        <label for="inputCity">Project</label>
-        {{ form.project }}
-        <!-- <input type="text" class="form-control" id="inputCity"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputZip">Lot</label>
-        {{ form.lot }}
-        <!-- <input type="text" class="form-control" id="inputZip"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputState">Number</label>
-        {{ form.number }}
-        <!-- <input type="text" class="form-control" id="inputZip"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="name_en">Product</label>
-        {{ form.product }}
-        <!-- <input type="text" class="form-control" id="inputEmail4" placeholder="Name (EN)"> -->
-      </div>
-    </div>
-      <div class="row justify-content-center">
-        
-      <div class="form-group col-md-2">
-        <label for="inputPassword4">Provider</label>
-        {{ form.provider }}
-        <!-- <input type="text" class="form-control" id="inputPassword4" placeholder="Name (FR)"> -->
-      </div>
-      <div class="form-group  col-md-2">
-          <label for="inputAddress">Origin</label>
-          {{ form.origin }}
-          <!-- <input type="text" class="form-control" id="inputAddress" placeholder="RU"> -->
-        </div>
-        <div class="form-group  col-md-2">
-            <label for="inputAddress2">Manufactured in</label>
-            {{ form.manufactured_in }}
-            <!-- <input type="text" class="form-control" id="inputAddress2" placeholder="Name (TM)"> -->
-        </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="form-group col-md-2">
-        <label for="inputZip">Location</label>
-        {{ form.location }}
-        <!-- <input type="text" class="form-control" id="inputZip"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputZip">Trade</label>
-        {{ form.trade }}
-        <!-- <input type="text" class="form-control" id="inputZip"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputZip">Annexe-5</label>
-        {{ form.annexe5 }}
-        <!-- <input type="text" class="form-control" id="inputZip"> -->
-    </div>
-    </div>
-
-    <div class="row justify-content-center">
-      
-      <div class="form-group col-md-2">
-        <label for="inputState">Department</label>
-        {{ form.department }}
-        <!-- <input type="text" class="form-control" id="inputZip"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputCity">FP Type</label>
-        {{ form.fp_type }}
-        <!-- <input type="text" class="form-control" id="inputCity"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputCity">Phase</label>
-        {{ form.phase }}
-        <!-- <input type="text" class="form-control" id="inputCity"> -->
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputZip">Index</label>
-        {{ form.index }}
-        <!-- <input type="text" class="form-control" id="inputZip"> -->
-      </div>
-    </div>
-      
-      <div class="row justify-content-center">
-        <div class="form-group col-md-4">
-          <label for="inputCity">Protocol</label>
-          {{ form.protocol }}
-          <!-- <input type="text" class="form-control" id="inputCity"> -->
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">Observation</label>
-          {{ form.observation }}
-          <!-- <input type="text" class="form-control" id="inputZip"> -->
-        </div>
-      </div>
-
-  <div class="row justify-content-center m-5">
-
-      <button type="submit" class="btn btn-primary" style="max-width: max-content;">{{ submit_button_name }}</button>
-    </div>
-
-  </form>
-
-<!-- </div> -->
-
+{% include "fiche_produit/fiche_produit_edit_form.html" with fp_form=form fp_submit_button_name=submit_button_name %}
 
 {% endblock %}
 {% block js %}
